# find-app

./: README.md  __init__.py  build.md  find_app.py  pyproject.toml
src/find_app/: __init__.py  find_app.py
tests/: __init__.py  test_find_app.py
